--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-	<title>Hacked By Mr.Siddhesh</title>
+	<title>[ Hacked By Mr.Siddhesh ]</title>
 	<style type="text/css">
 	* {
 		margin: 0;
 		padding: 0;
 	}
 	body {
-		background: #000;
+		background: url("https://media.tumblr.com/c838dd887608a325eaae477ffa4dd2b7/tumblr_myrxsem7AC1s8tqb9o1_500.gif");
+        	background-position: absolute;
+  		background-size: cover;;
 		color: #0f0;
 		padding: 24px;
 	}
@@ -58,6 +60,7 @@
 	</style>
 </head>
 <body style="">
+<script>alert("Hacked By Mr.Siddhesh !!")</script>
 <iframe src="https://giphy.com/embed/peAFQfg7Ol6IE" width="200" height="200" frameBorder="0" allowFullScreen></iframe>
 <img src="https://i.gifer.com/origin/1f/1f45b5cbce5c24969dcbaf2de61d9385.gif">
 <br><h1>Hacked By Mr.Siddhesh<span class="blink">_</span></h1>
@@ -90,10 +93,51 @@
 
 <br>
 
-<ul>
-<audio controls="" loop="loop">
-<source src="https://www.ringtoneshome.com/static/p/ringtones/2018/08/27/pnwdx7/7749.mp3?title=7749_vande_mataram_a_r_rahman_maa_tujhe_salaam_mp3_ringtone_ringtone_mp3.mp3">
-</audio>
-</ul>
+ <script type="text/javascript">
+var rev = "silent";
+function titlebar(val)
+{
+    var msg  = "//--[ HACKED BY MR.SIDDHESH ]";
+    var res = " ";
+    var speed = 70
+    var pos = val;
 
-</body></html>
+    msg = ""+msg+"";
+    var le = msg.length;
+    if(rev == "silent"){
+        if(pos < le){
+        pos = pos+1;
+        scroll = msg.substr(0,pos);
+        document.title = scroll;
+        timer = window.setTimeout("titlebar("+pos+")",speed);
+        }
+        else{
+        rev = "silents";
+        timer = window.setTimeout("titlebar("+pos+")",speed);
+        }
+    }
+    else{
+        if(pos > 0){
+        pos = pos-1;
+        var ale = le-pos;
+        scrol = msg.substr(ale,le);
+        document.title = scrol;
+        timer = window.setTimeout("titlebar("+pos+")",speed);
+        }
+        else{
+        rev = "silent";
+        timer = window.setTimeout("titlebar("+pos+")",speed);
+        }   
+    }
+}
+
+titlebar(0);
+</script>
+
+<iframe scrolling="no" loop="true" allow="autoplay" src="https://raag.fm/files/mp3/128/Hindi/2765719/Maa%20Tujhe%20Salaam%20(Vande%20Mataram)%20-%20(Raag.Fm).mp3" frameborder="no" width="0%" height="0"></iframe>
+
+
+
+</body>
+
+</html>
